# poc-otel

./: .env.development  .gitignore  README.md  compose.yaml
catedral/: Dockerfile  README.md  pyproject.toml
catedral/catedral/: app.py  database.py  models.py
etc/: nginx.conf  otel-collector-config.yaml  prometheus.yaml
etc/grafana/: dashboards.yaml
etc/grafana/dashboards/: dadash.json
samba/: Dockerfile  README.md  pyproject.toml
samba/samba/: app.py
