[tool.poetry]
name = "catedral"
version = "0.1.0"
description = ""
authors = ["Renato Crudo <renato.almeida@soupilar.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
opentelemetry-distro = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"
httpx = "^0.27.0"
opentelemetry-instrumentation-httpx = "^0.44b0"
opentelemetry-instrumentation-logging = "^0.44b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
