[tool.poetry]
name = "samba"
version = "0.1.0"
description = ""
authors = ["Renato Crudo <renato.almeida@soupilar.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
opentelemetry-distro = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"
httpx = "^0.27.0"
opentelemetry-instrumentation-httpx = "^0.44b0"
opentelemetry-instrumentation-logging = "^0.44b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
